# tcc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  tcc.cc
apps/: CMakeLists.txt  tcc.cc
include/tcc/affn/: index_validator.h  ir.h  ir_lower.h  ir_printer.h  ir_visitor.h
include/tcc/common/: data.h  datatype.h  logging.h  util.h
include/tcc/core/: compiler.h  context.h  data.h  datatype.h  hlir.h  ir.h  ir_codegen.h  ir_dep_analysis.h  ir_printer.h  ir_util.h  ir_visitor.h  llir.h  logging.h  operator.h  operator_builder.h  operator_registry.h  register_op.h  util.h
include/tcc/core/common/: data.h  datatype.h  logging.h  operator.h  operator_builder.h  operator_registry.h  register_op.h  tensor.h  util.h
include/tcc/core/hlir/: hlir.h  lower.h  operation.h  variable.h  visualize.h
include/tcc/core/llir/: cgen.h  expression.h  llir.h  primitive.h  visualize.h
include/tcc/core/operator/: operator.h  operator_builder.h  operator_registry.h  register_op.h
include/tcc/frontend/: frontend.h  op.h  parse.h  parser.h
include/tcc/hlir/: dot_printer.h  index_validator.h  ir.h  lower.h  visitor.h
include/tcc/lang/: ir.h
include/tcc/llir/: ir.h
include/tcc/parser/: parser.h
include/tcc/util/: logging.h
src/: CMakeLists.txt
src/affn/: index_validator.cc  ir.cc  ir_lower.cc  ir_printer.cc  ir_visitor.cc
src/core/: CMakeLists.txt  compiler.cc  context.cc  hlir.cc  ir.cc  ir_codegen.cc  ir_dep_analysis.cc  ir_printer.cc  ir_util.cc  ir_visitor.cc  llir.cc  operator.cc  operator_builder.cc  operator_registry.cc
src/core/common/: data.cc  operator.cc  operator_builder.cc  operator_registry.cc
src/core/hlir/: hlir.cc  lower.cc  operation.cc  variable.cc  visualize.cc
src/core/llir/: cgen.cc  expression.cc  llir.cc  primitive.cc  visualize.cc
src/core/operator/: operator.cc  operator_builder.cc  operator_registry.cc
src/frontend/: CMakeLists.txt  op.cc  parse.cc  parser.cc  tensorflow.cc
src/frontend/proto/: CMakeLists.txt  op_def.proto
src/frontend/tensorflow/: CMakeLists.txt  parser.cc
src/frontend/tensorflow/proto/: CMakeLists.txt
src/frontend/tensorflow_proto/: CMakeLists.txt
src/hlir/: dot_printer.cc  index_validator.cc  ir.cc  lower.cc  visitor.cc
src/lang/: ir.cc
src/llir/: ir.cc
src/op/: CMakeLists.txt  ops.cc  tensorflow.cc
src/ops/: CMakeLists.txt  ops.cc
src/parser/: CMakeLists.txt  parser.cc
src/parser/proto/: CMakeLists.txt
src/parser/protos/: CMakeLists.txt  types.proto
test/: CMakeLists.txt  nn_test.cc  op_test.cc
